Release version 1.4.3 - Fixed header icon misalignment.

--- a/src/dialog.styl
+++ b/src/dialog.styl
@@ -69,6 +69,7 @@ $maxHeight = 75vh
         position relative
         display flex
         justify-content space-between
+        align-items center
 
         .title
             overflow hidden
